@@ -1,19 +1,26 @@
 package io.algafoodapi.domain.service;
 
+import io.algafoodapi.domain.exception.EntidadeEmUsoException;
 import io.algafoodapi.domain.exception.EntidadeNaoEncontradaException;
 import io.algafoodapi.domain.exception.RequisicaoMalFormuladaException;
 import io.algafoodapi.domain.model.Cidade;
-import io.algafoodapi.domain.model.Estado;
 import io.algafoodapi.domain.repository.CidadeRepository;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
-public final class CidadeService {
+public class CidadeService {
+
+    public static final String NÃO_ENCONTRADA_CIDADE_COM_ID = "Não encontrada cidade com código %d.";
+    public static final String PROIBIDO_APAGAR_CIDADE_EM_USO_COM_ID = "Proibido apagar cidade em uso. Código: %d.";
+    public static final String NÃO_EXISTEM_CIDADES_CADASTRADAS = "Não há cidades cadastradas.";
 
     @Autowired
     private CidadeRepository cidadeRepository;
@@ -21,27 +28,32 @@ public final class CidadeService {
     @Autowired
     private EstadoService estadoService;
 
-    public Cidade salvar(Cidade cidade) throws EntidadeNaoEncontradaException {
+    public Cidade criar(Cidade cidade) {
 
-        var estadoId = cidade.getEstado().getId();
-        var estado = this.estadoService.consultarPorId(estadoId);
-        cidade.setEstado(estado);
+        try {
+            var estado = this.estadoService.consultarPorId(cidade.getEstado().getId());
+            cidade.setEstado(estado);
+
+        } catch (EntidadeNaoEncontradaException naoEncontradaException) {
+            throw new RequisicaoMalFormuladaException(
+                    String.format(EstadoService.NÃO_ENCONTRADO_ESTADO_COM_ID, cidade.getEstado().getId()));
+        }
 
         return this.cidadeRepository.saveAndFlush(cidade);
     }
 
-    public Cidade atualizar(Long id, Cidade cidadeAtual) throws EntidadeNaoEncontradaException, RequisicaoMalFormuladaException {
+    public Cidade atualizar(Long id, Cidade cidadeAtual) {
 
         var cidade = this.consultarPorId(id);
 
-        Estado estado;
         try {
-            estado = this.estadoService.consultarPorId(cidadeAtual.getEstado().getId());
+            var estado = this.estadoService.consultarPorId(cidadeAtual.getEstado().getId());
+            cidadeAtual.setEstado(estado);
+
         } catch (EntidadeNaoEncontradaException naoEncontradaException) {
             throw new RequisicaoMalFormuladaException(naoEncontradaException.getMessage());
         }
 
-        cidadeAtual.setEstado(estado);
         BeanUtils.copyProperties(cidadeAtual, cidade, "id");
 
         return this.cidadeRepository.saveAndFlush(cidade);
@@ -53,25 +65,31 @@ public final class CidadeService {
             this.cidadeRepository.deleteById(id);
 
         } catch (EmptyResultDataAccessException dataAccessException) {
-            throw new EntidadeNaoEncontradaException("""
-                    Não encontrada cidade com código %d.""".formatted(id));
+            throw new EntidadeNaoEncontradaException(String.format(NÃO_ENCONTRADA_CIDADE_COM_ID, id));
+
+        } catch (DataIntegrityViolationException dataIntegrityViolationException) {
+            throw new RequisicaoMalFormuladaException(String.format(PROIBIDO_APAGAR_CIDADE_EM_USO_COM_ID, id));
         }
     }
 
     public Cidade consultarPorId(Long id) {
 
         return this.cidadeRepository.findById(id)
-                .orElseThrow(() -> new EntidadeNaoEncontradaException("""
-                    Não encontrada cidade com código %d.""".formatted(id)));
+                .orElseThrow(() -> new EntidadeNaoEncontradaException(
+                    String.format(NÃO_ENCONTRADA_CIDADE_COM_ID, id)));
     }
 
-    public List<Cidade> buscarTodos() {
+    public List<Cidade> listar() {
 
-        var cidades = this.cidadeRepository.findAll();
+        var cidades = this.cidadeRepository.findAll()
+                .stream()
+                .sorted(Comparator.comparing(Cidade::getId).reversed())
+                .collect(Collectors.toList());
 
         if(cidades.isEmpty())
-            throw new EntidadeNaoEncontradaException(String.format("Não há cidades cadastradas no banco de dados."));
+            throw new EntidadeNaoEncontradaException(String.format(NÃO_EXISTEM_CIDADES_CADASTRADAS));
 
         return cidades;
     }
 }
+
